--- a/2/index.html
+++ b/2/index.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="../css/styles/github.css">
 </head>
 <body>
-<h1>mt2y</h1>
+<h1>mls555666</h1>
 <p>本站为游戏资源爱好者搭建的个人网站, 非游戏资源官网</p>
 <p>建议使用 Chrome 或者 Firefox 等现代浏览器以获得最佳的浏览效果.</p>
 <br><br>
