--- a/2/index.html
+++ b/2/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="author" content="lmintlcx">
-<meta name="description" content="mt2y">
+<meta name="description" content="关于本站">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>About Us</title>
 <link rel="icon" href="../favicon.ico">
@@ -12,8 +12,8 @@
 <link rel="stylesheet" href="../css/styles/github.css">
 </head>
 <body>
-<h1>mls555666</h1>
-<p>本站为游戏资源爱好者搭建的个人网站, 非游戏资源官网</p>
+<h1>关于本站</h1>
+<p>本站为游戏资源爱好者mt2y与555搭建的个人网站, 非游戏资源官网</p>
 <p>建议使用 Chrome 或者 Firefox 等现代浏览器以获得最佳的浏览效果.</p>
 <br><br>
 <h1>鸣谢</h1>
